--- a/display-flex.html
+++ b/display-flex.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/dist/styles.css" />
 
     <style>
       :root {
@@ -151,6 +152,23 @@
       <a href="/quizes/quiz-2.html">QUIZ 2</a>
       <a href="/quizes/quiz-3.html">QUIZ 3</a>
     </nav>
+
+    <header class="flex">
+      <div class="flex__content">
+        <h1 class="flex__content-title">Lorem Ipsum</h1>
+      </div>
+      <div class="flex__content--with-background">
+        <p>Hello World</p>
+      </div>
+      <div class="flex__content">
+        <h2 class="flex__content-title">Lorem Ipsum</h2>
+      </div>
+      <div class="flex__content">
+        <img class="flex__content-image" src="https://images.pexels.com/photos/27163466/pexels-photo-27163466/free-photo-of-woman-reading-a-book-in-shadow.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" />
+      </div>
+    </header>
+
+
     <div class="flex-wrapper">
       <h1>DISPLAY: FLEX</h1>
       <a href="https://flexboxfroggy.com/#pl" target="_blank">LET's START WITH…</a>
