--- a/inline-styling.html
+++ b/inline-styling.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/dist/styles.css" />
      <style>
       .alert {
         background-color: var(--sbne-color-alert);
