--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/assets/favicon.ico" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/dist/styles.css" />
   </head>
 
   <body>
@@ -19,6 +20,11 @@
       <a href="/quizes/quiz-2.html">QUIZ 2</a>
       <a href="/quizes/quiz-3.html">QUIZ 3</a>
     </nav>
+
+    <section class="wrapper">
+      <img  src="https://cdn.pixabay.com/photo/2016/11/18/16/19/flowers-1835619_1280.jpg" alt="">
+    </section>
+
     <h1>CONTROL YOUR CSS <span class="yellow">CODE</span>:</h1>
     <div class="theory">
       <div class="theory__element theory__element--full-width">
